[package]
name = "axum_rust"
version = "0.1.0"
authors = ["Bishoy Boktor <bishoyboktor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"
